# graphic-engine

./: .gitignore
GraphicEngine/: GraphicEngine.sln
GraphicEngine/Project1/: BitmapHandler.cpp  BitmapHandler.hpp  BitmapObject.cpp  BitmapObject.hpp  CMakeLists.txt  Circle.cpp  Circle.hpp  CircleShape.cpp  CircleShape.hpp  Color.cpp  Color.hpp  DrawableObject.hpp  Engine.cpp  Engine.hpp  FallingObject.cpp  FallingObject.hpp  GameObject.hpp  GameOverScreen.hpp  HealthCrystal.cpp  HealthCrystal.hpp  HealthDisplay.cpp  HealthDisplay.hpp  HexagonShape.cpp  HexagonShape.hpp  IDrawable.hpp  Initializer.hpp  InputState.cpp  InputState.hpp  Line2D.cpp  Line2D.hpp  LineSegment.cpp  LineSegment.hpp  Makefile  ObjectManager.hpp  Player.cpp  Player.hpp  Point2D.cpp  Point2D.hpp  PolygonShape.cpp  PolygonShape.hpp  (+17 more)
GraphicEngine/Project1/assets/: heart_full.png~
GraphicEngine/Project1/x64/Debug/: Project1.exe.recipe
